--- a/.github/workflows/error.wf.yaml
+++ b/.github/workflows/error.wf.yaml
@@ -20,3 +20,7 @@ jobs:
           echo "Inside group 2"
           echo "Inside group 3"
           echo "::endgroup::"
+      - name: Masking a value
+        run: echo "::add-mask::Secret String"
+      - name: Echo a secret
+        run: echo "Secret String"
