--- a/.github/workflows/simple-web-ec2-single-smart.yaml
+++ b/.github/workflows/simple-web-ec2-single-smart.yaml
@@ -62,4 +62,5 @@ jobs:
 
       - name: Wait for deployment to complete
         run: |
+          echo ${{ steps.deploy.outputs.deployment_id }}
           aws deploy wait deployment-successful --deployment-id ${{ steps.deploy.outputs.deployment_id }}
